--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>my first github website</h1>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore pariatur nostrum consequuntur praesentium non tenetur totam amet optio vel provident corporis animi ullam fuga, sit sed, iusto, aut recusandae velit dolorem maxime soluta. Eligendi provident ullam dignissimos ducimus, voluptatum commodi!</p>
+
+    <img style="width: 500px;height: 400px;" src="eurofighter typhoon 1.jpg" alt="">
     
 </body>
 </html>
